--- a/app/scss/module/_quote.scss
+++ b/app/scss/module/_quote.scss
@@ -1,7 +1,7 @@
 .quote {
 	background: url(../images/quote/quote-bg.jpg) no-repeat left top;
 	background-size: cover;
-	max-width: 1600px;
+	max-width: 1920px;
 	padding: 5em 0 3.13em;
 	margin: 0 auto;
 
@@ -22,6 +22,11 @@
 
 	.flex-control-nav {
 		bottom: 0;
+		left: 0;
+	}
+
+	.flex-direction-nav {
+		display: none;
 	}
 }
 
