--- a/app/scss/module/_slider.scss
+++ b/app/scss/module/_slider.scss
@@ -1,6 +1,5 @@
 #slideshow {
-	max-width: 1600px;
-	width: 100%;
+	max-width: 1920px;
 	margin: 0 auto;
 }
 
